# MEXPE

./: .gitignore  ACCT_009_01_02_2021 (1).csv  ACCT_009_01_02_2021 (1)_c.csv  ACCT_009_01_02_2021.csv  ACCT_009_01_02_2021.xlsx  ACCT_009_01_02_2021_c.csv  ACCT_009_01_02_2021_c.xlsx  ACCT_009_02_01_2020.txt  classifyDB.ini  classifyDB.txt  hs-test.cab  hs-test.cabal  path.stack  stack.yaml  tt.txt
src/: Main.hs
