cabal-version:       >=1.10
name:                hs-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-test#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksandr Zhukov
maintainer:          alzhu@mail.ru
copyright:           2020 Aleksandr Zhukov
category:            Console
build-type:          Simple
extra-source-files:  README.md

executable hs-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2.3.3 && < 1.0.0.0
